--- a/Kyrsach/Properties/Resources.resx
+++ b/Kyrsach/Properties/Resources.resx
@@ -123,4 +123,7 @@
   <data name="SaveLogin" xml:space="preserve">
     <value />
   </data>
+  <data name="SaveMail" xml:space="preserve">
+    <value />
+  </data>
 </root>
